--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "moment": "^2.29.1",
     "mongoose": "^6.2.7",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15",
     "pdf-creator-node": "^2.3.4",
     "pdfkit": "^0.13.0"
